初始化出现源码的问题

--- a/service/src/main/webapp/forEmployee.html
+++ b/service/src/main/webapp/forEmployee.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body ontouchstart>
-<div id="app" class="container">
+<div id="app" class="container" v-cloak>
     <div class="weui-toptips weui-toptips_warn js_tooltips" style="display: inline;" v-show="errFlag">{{errMsg}}
     </div>
     <div class="page tabbar js_show">
