1.上传文件优化； 2.查询待处理bug修复

--- a/service/src/main/webapp/forEmployee.html
+++ b/service/src/main/webapp/forEmployee.html
@@ -574,7 +574,7 @@
                        for(let i = 1; i < data.length; i++){
                            if(data[i].name.indexOf("公司") != -1){
                                subsidiary.push(data[i]);
-                           } else if(data[i].name.indexOf("部门") != -1){
+                           } else if(data[i].name.indexOf("部") != -1){
                                department.push(data[i]);
                            } else{
                                other.push(data[i]);
